<resources>
    <string name="app_name">StoryTeller</string>
    <string name="font_awesome_folder">&#xf07b;</string>
    <string name="font_awesome_file">&#xf15b;</string>

    <string name="btnBrowse">Browse</string>
    <string name="btn_save">Save</string>
    <string name="btn_set">Set my wallpaper</string>
    <string name="btn_choose">Choose</string>

    <string name="label_of_path_directory">Choose your picture directory</string>
    <string name="label_of_path_image">Choose your default background</string>


    <string name="title_of_chooserview">We found many souvenirs !</string>
    <string name="subtitle_of_chooserview">Choose one of them to set as your wallpaper</string>

    <string name="intent_extra_directory">PathDirectory</string>
    <string name="intent_extra_wallpaper">PathWallpaper</string>

    <!-- Shared Preferences -->
    <string name="preference_file_name">com.example.StoryTeller.PREFERENCE_FILE_NAME</string>
    <string name="saved_path_directory">PathDirectory</string>
    <string name="saved_path_directory_default">""</string>
    <string name="saved_path_wallpaper">PathWallpaper</string>
    <string name="saved_path_default_wallpaper">""</string>
    <string name="saved_path_found">PathPictureFound</string>
    <string name="saved_wallpaper_default_set">DefaultWallpaperSet</string>
    <string name="saved_wallpaper_default_set_option">No</string>

</resources>
