<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sag0ld.background_stories.MainActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:background="@color/backgroundColor">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="129dp"
        android:id="@+id/imageView3"
        android:background="@drawable/storyteller_text_logo"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:tintMode="multiply"
        android:scaleType="center"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TableRow>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_of_path_directory"
                android:textColor="@color/colorButton"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/pathFolder"
                android:backgroundTint="@color/colorLineEditText"
                android:textCursorDrawable="@null"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                style="@style/Widget.AppCompat.EditText"
                android:maxLines="1"
                android:layout_weight="1"
                android:enabled="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonFindFolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/btnBrowse"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorButtonText" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/label_of_path_image"
                android:textColor="@color/colorButton"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/pathDefaultWallpaper"
                android:layout_weight="1"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:backgroundTint="@color/colorLineEditText"
                android:enabled="false" />

            <Button
                android:id="@+id/btnBrowsePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/btnBrowse"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorButtonText" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnSetWallPaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_set"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorButtonText"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnSaveSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_save"
        android:textAllCaps="false"
        android:textColor="@color/colorButtonText"
        android:textSize="30sp" />

</LinearLayout>
